validator_derive_tests/tests/compile-fail/custom/different_lifetime.stderr
error[E0261]: use of undeclared lifetime name `'a`
 --> $DIR/different_lifetime.rs:7:10
  |
7 | #[derive(Validate)]
  |          ^^^^^^^^ undeclared lifetime
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider introducing lifetime `'a` here
  |
8 | 'a, struct Test {
  | ^^^
help: consider introducing lifetime `'a` here
  |
7 | #[derive(Validate<'a>)]
  |                  ^^^^
